--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h1 class="heading-primary md:text-4xl text-2xl">
               A Secure Platform for Medical and Aesthetic Professionals
             </h1>
-            <div class="prose">
+            <div class="prose mb-4">
               <p>Wigmore Medical is the UK’s longest-established aesthetics distribution company, with over 30 years of experience supplying prescription medicines, devices, and skincare to medical and aesthetic professionals.</p>
               <p>This platform is designed exclusively for registered professionals to securely order products, manage prescriptions, add prescribers and patients, and access tailored pricing and offers through the Wigmore Portal.</p>
               <p>If you are looking to book a pharmacy appointment or access public services, please visit our Wigmore Pharmacy website.</p>
@@ -170,7 +170,7 @@
           <div class="flex items-center gap-4">
             <div class="flex-1 overflow-hidden">
               <div class="relative md:aspect-10/4 aspect-5/4 rounded-2xl overflow-hidden">
-                <img src="/assets/placeholder-jennie.png" alt="" loading="lazy" decoding="async" class="absolute inset-0 w-full h-full object-cover">
+                <img src="/assets/placeholder-pharmacy.png" alt="" loading="lazy" decoding="async" class="absolute inset-0 w-full h-full object-cover">
                 <div class="absolute inset-0 md:bg-linear-to-t bg-linear-to-b from-black/90 via-black/20 to-transparent"></div>
                 <div class="absolute inset-0 md:p-8 p-4 flex flex-col md:justify-end">
                   <div class="flex h-full md:h-auto md:flex-row flex-col md:items-end items-start justify-between gap-6">
